crates/tsuno-driver/tests/fixtures/snapshots/pass/unsafe_function_resource_contract_call.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: result
---
status: Some(0)
stdout:
PASS set_to_expected
  all assertions discharged
PASS unsafe_function_resource_contract_call
  all assertions discharged
PASS main
  all assertions discharged

stderr:
