crates/tsuno-driver/tests/fixtures/snapshots/pass/unsafe_lemma_resource_contract.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS unsafe_lemma_resource_contract
  all assertions discharged
PASS main
  all assertions discharged

stderr:
