crates/tsuno-driver/tests/fixtures/snapshots/pass/unsafe_raw_pointer_read_write.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS raw_pointer_read_write
  all assertions discharged
PASS main
  all assertions discharged

stderr:
