crates/tsuno-driver/tests/fixtures/snapshots/pass/uses_prelude_own_i32_lemmas.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 116
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS uses_prelude_own_i32_lemmas
  all assertions discharged
PASS main
  all assertions discharged

stderr:
