crates/tsuno-driver/tests/fixtures/snapshots/pass/uses_seq_syntax.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS verifies_seq_concat
  all assertions discharged
PASS verifies_seq_index_zero
  all assertions discharged
PASS verifies_seq_index_succ
  all assertions discharged
PASS main
  all assertions discharged

stderr:
