crates/tsuno-driver/tests/fixtures/snapshots/pass/verifies_a_trivial_assertion_fixture.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS ok
  all assertions discharged
PASS main
  all assertions discharged

stderr:
