crates/tsuno-driver/tests/fixtures/snapshots/pass/verifies_all_functions_without_marker.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS helper
  all assertions discharged
PASS caller
  all assertions discharged
PASS main
  all assertions discharged

stderr:
